objects/bedrock__LghtIdeasCategories__c.object
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <fields>
        <fullName>bedrock__Label__c</fullName>
        <label>Label</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>bedrock__Order__c</fullName>
        <description>Setup item position within list</description>
        <inlineHelpText>Setup item position within list</inlineHelpText>
        <label>Order</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>bedrock__Parent__c</fullName>
        <label>Parent</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>bedrock__Zone__c</fullName>
        <description>Assigned Ideas Zone</description>
        <inlineHelpText>Used to define the Community where to display current category</inlineHelpText>
        <label>Zone Name</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <label>AC Ideas Custom Categories</label>
</CustomObject>